# Voice-Assistant

./: .env.example  .env.sample  .gitignore  QUICKSTART.md  README.md  ai_client.py  asr_corrector.py  audio_player.py  cloud_asr.py  config.yaml  coverage.json  interpreter_executor.py  local_llm.py  package-lock.json  pyproject.toml  requirements.txt  run.py  run_voice.bat  security_utils.py  start.bat  start.sh  test_system.py  tts.py  vad.py  voice_assistant_ai.py  web_ui.py
.claude/PRPs/reviews/: code-review-session.md
.github/workflows/: ci.yml
config/: __init__.py  config.yaml  hotwords.json  llm_models.yaml  mcp_servers.yaml  secrets.example.yaml
config/schemas/: config.schema.json
data/: web_ui.db
docs/: API.md  ARCHITECTURE.md  CONFIG.md  DEVELOPMENT.md  MCP_SKILL.md  MODULES.md  QUICKSTART.md  README.md
executors/: __init__.py  chat_executor.py  computer_executor.py
models/: .gitkeep  __init__.py
scripts/: check_env.py  cleanup_hotwords.py  list_hotwords.py  match_best_vocabulary.py  register_hotwords.py  test_hotwords.py
services/: __init__.py  router_service.py
skills/built-in/echo-skill/: SKILL.md
skills/built-in/file-search-helper/: SKILL.md
src/voice_assistant/: __init__.py  __main__.py  app.py  db.py  main.py
src/voice_assistant/agent/: __init__.py  events.py  llm_client.py  orchestrator.py  retry.py
src/voice_assistant/agent/hooks/: __init__.py  audit.py  chain.py  guard.py  metrics.py  rate_limit.py  validation.py
src/voice_assistant/audio/: __init__.py  asr_provider.py  cloud_asr.py  funasr_asr.py  player.py  tts.py  vad.py
src/voice_assistant/config/: __init__.py
src/voice_assistant/core/: __init__.py  ai_client.py  asr_corrector.py  compaction.py  dependencies.py  events.py  lifecycle.py  local_llm.py  model_manager.py  session.py  session_tree.py
src/voice_assistant/executors/: __init__.py  base.py  chat.py  computer.py  interpreter.py
src/voice_assistant/model/: __init__.py  intent.py
src/voice_assistant/models/: __init__.py
src/voice_assistant/platform/: __init__.py
src/voice_assistant/security/: __init__.py  safe_guard.py  validation.py  ws_auth.py
src/voice_assistant/services/: __init__.py  router.py
src/voice_assistant/skills/: __init__.py  deps.py  loader.py  manager.py  meta_tools.py  models.py  selector.py
src/voice_assistant/tools/: __init__.py  registry.py  tool_groups.py
src/voice_assistant/tools/mcp/: __init__.py  bridge.py  config.py  echo_server.py  manager.py  meta_tools.py
src/voice_assistant/tools/platform_specific/: __init__.py  mac_ops.py  win_ops.py
src/voice_assistant/tools/universal/: __init__.py  browser_ops.py  clipboard_ops.py  code_ops.py  display_ops.py  file_advanced_ops.py  file_ops.py  input_ops.py  media_ops.py  network_ops.py  (+6 more)
src/voice_assistant/web/: __init__.py  app.py  audio.py  config_api.py  history_api.py  mcp_skill_api.py  middleware.py  providers_api.py  routes.py  ws.py
tests/: conftest.py  test_intent_classification.py  test_local_llm.py  test_local_model_integration.py  test_system.py
tests/test_agent/: test_hooks.py  test_llm_client.py  test_llm_retry_integration.py  test_orchestrator.py  test_orchestrator_stream.py  test_retry.py  test_skill_injection.py
tests/test_audio/: __init__.py  test_asr_registry.py  test_cloud_asr_callback.py  test_cloud_asr_extended.py  test_funasr_asr.py  test_player.py  test_tts_provider.py  test_tts_streaming.py  test_vad.py
tests/test_core/: test_compaction.py  test_config_validation.py  test_dependencies.py  test_events.py  test_lifecycle_integration.py  test_model_manager.py  test_session_history.py  test_session_orchestrator_integration.py  test_session_stream.py  test_session_tree.py
tests/test_executors/: __init__.py  test_base.py
tests/test_platform/: test_platform.py
tests/test_security/: __init__.py  test_safe_guard.py  test_tool_rate_limit.py  test_ws_auth.py
tests/test_services/: __init__.py
tests/test_skills/: test_deps.py  test_meta_tools.py  test_skills.py
tests/test_tools/: test_code_ops.py  test_mcp.py  test_mcp_meta.py  test_registry.py  test_tool_groups.py  test_tool_result.py  test_utility_ops.py
tests/test_web_ui/: test_audio_format.py  test_config_api.py  test_mcp_skill_endpoints.py  test_session_integration.py  test_websocket.py  test_websocket_e2e.py
web_static/: app.js  index.html  style.css
web_static/js/: api.js  app.js  audio.js  config.js  mcp_skill.js  state.js  ui.js  utils.js  ws.js
web_static/worklets/: pcm-processor.js
(+3 files in other folders)
