[project]
name = "voice-assistant"
version = "2.0.0"
description = "Voice Assistant with local/online LLM support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Voice Assistant Team" }
]

dependencies = [
    # Audio - 使用兼容 Python 3.14 的版本
    "numpy>=1.21.0",
    "sounddevice>=0.4.0",
    "soundfile>=0.13.1",
    "pygame>=2.6.1",
    # TTS
    "edge-tts>=7.2.0",
    # STT
    "dashscope>=1.25.0",
    # HTTP
    "requests>=2.32.0",
    # Config
    "python-dotenv>=1.2.0",
    "PyYAML>=6.0",
    # Open Interpreter
    "open-interpreter>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pip-audit>=2.7.0",
]
local-llm = [
    "litert-lm-api-nightly>=0.10.0",
]

[project.scripts]
voice-assistant = "voice_assistant.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_assistant"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pip-audit>=2.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]