[project]
name = "voice-assistant"
version = "2.0.0"
description = "Web-only Chinese voice assistant powered by multi-provider LLMs"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Voice Assistant Team" }
]

dependencies = [
    # Audio
    "numpy>=1.21.0,<3.0.0",
    "soundfile>=0.13.1,<1.0.0",
    "pydub>=0.25.1,<1.0.0",
    # TTS
    "edge-tts>=7.2.0,<8.0.0",
    # STT
    "dashscope>=1.25.0,<2.0.0",
    # HTTP
    "requests>=2.32.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    # Multi-provider LLM
    "litellm>=1.40.0",
    # Config
    "python-dotenv>=1.2.0,<2.0.0",
    "PyYAML>=6.0,<7.0",
    # Web UI
    "fastapi>=0.110.0,<0.120.0",
    "uvicorn[standard]>=0.24.0,<0.30.0",
    # Agent tools
    "pyautogui>=0.9.54,<1.0.0",
    "psutil>=5.9.0,<7.0.0",
    "Pillow>=10.0.0,<12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pip-audit>=2.7.0",
    "pyright>=1.1.0",
    "ruff>=0.4.0",
]
local-asr = [
    "funasr>=1.0.0",
    "modelscope>=1.10.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
]

[project.scripts]
voice-assistant = "voice_assistant.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = ["**/__pycache__", "venv", ".venv"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["__pycache__", "venv", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]